k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
spec:
  selector:
    app: weather-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
